...
                    .onTapGesture {
                        self.selectedItem = item
                    }
                }
                .onDelete(perform: deleteItems)
            }
            .navigationTitle("VerleihNix")
            .toolbar {
                ToolbarItem(placement: .navigationBarTrailing) {
                    Button(action: { showingAddItem = true }) {
                        Image(systemName: "plus")
                            .accessibilityIdentifier("addButton")
                    }
                }
                // Der EditButton wurde entfernt
            }
            .sheet(isPresented: $showingAddItem) {
...
