...
                Section(header: Text("Erinnerung")) {
                    DatePicker("Erinnerungsdatum", selection: $reminderDate, displayedComponents: [.date, .hourAndMinute])
                        .environment(\.locale, Locale(identifier: "de_DE"))
                        .accessibilityIdentifier("editReminderDatePicker")
                }
            }
            .navigationTitle("Eintrag Bearbeiten")
            .navigationBarItems(trailing: Button("Speichern") {
                if let index = verleihData.items.firstIndex(where: { $0.id == item.id }) {
                    // Entferne vorherige Benachrichtigung
                    verleihData.removeNotification(for: item)
                    
                    // Aktualisiere die Eintragsdaten
...
